--- a/package.json
+++ b/package.json
@@ -10,23 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@coreui/react": "^5.0.0-alpha.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.1",
     "jodit-react": "^1.3.39",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
-    "react-burger-menu": "^3.0.9",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
-    "react-paginate": "^8.2.0",
-    "react-pagination": "^1.0.0",
     "react-router-dom": "^6.15.0",
-    "react-scripts": "^2.1.3",
-    "react-slick": "^0.29.0",
-    "react-toastify": "^9.1.3",
-    "react-toggle-dark-mode": "^1.1.1",
-    "slick-carousel": "^1.8.1"
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
